@@ -34,13 +34,22 @@ idea {
 }
 
 javafx {
-    version = "13"
-    modules = ['javafx.controls']
+    version = "15"
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 ktor {
     fatJar {
         archiveFileName.set("pimonitor.jar")
+    }
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
     }
 }
 
